fix: add 'see demo z-index-500

--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -94,7 +94,8 @@
                     }
                 }
 
-                a {
+                a { position: relative;
+                    z-index: 500;
                     display: flex;
                     justify-content: center;
                     align-items: center;
